# src/main/java/com/pragma/powerup/application/mapper/IUserRequestMapper.java
@@ -1,5 +1,6 @@
 package com.pragma.powerup.application.mapper;
 
+import com.pragma.powerup.application.dto.request.EmployeeRequestDto;
 import com.pragma.powerup.application.dto.request.UserRequestDto;
 import com.pragma.powerup.domain.model.UserModel;
 import org.mapstruct.Mapper;
@@ -11,4 +12,6 @@ import org.mapstruct.ReportingPolicy;
 public interface IUserRequestMapper {
 
     UserModel toModel(UserRequestDto userRequestDto);
+
+    UserModel toModel(EmployeeRequestDto employeeRequestDto);
 }
