# src/main/java/com/pragma/powerup/domain/api/IUserServicePort.java
@@ -4,5 +4,6 @@ import com.pragma.powerup.domain.model.UserModel;
 
 public interface IUserServicePort {
     void guardarPropietario(UserModel userModel);
+    void guardarEmpleado(UserModel userModel);
     UserModel obtenerUsuarioPorId(Long id);
 }
