# src/main/java/com/pragma/powerup/infrastructure/out/jpa/entity/UserEntity.java
@@ -39,7 +39,7 @@ public class UserEntity {
     @Column(nullable = false, length = 13)
     private String celular;
 
-    @Column(name = "fecha_nacimiento", nullable = false)
+    @Column(name = "fecha_nacimiento")
     private LocalDate fechaNacimiento;
 
     @Column(nullable = false, unique = true)
