# src/main/java/com/pragma/powerup/infrastructure/out/security/config/SecurityConfiguration.java
@@ -38,6 +38,7 @@ public class SecurityConfiguration {
                 ).permitAll()
                 .antMatchers(HttpMethod.GET, "/api/v1/user/**").permitAll()
                 .antMatchers(HttpMethod.POST, "/api/v1/user/propietario").hasRole("ADMINISTRADOR")
+                .antMatchers(HttpMethod.POST, "/api/v1/user/empleado").hasRole("PROPIETARIO")
                 .anyRequest().authenticated()
                 .and()
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
